--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -1,10 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+/* font-family: "Roboto", sans-serif; */
+/* font-family: "El Messiri", sans-serif; */
+
+:root{
+  --main-color: #ff0000;
+  --second-color: #780116;
+  --bg-color: #fffffc;
+  --back-color: #edf6f9af;
+  --text-color: #220901;
+  --light-hover: #ff0101ca;
+}
+
 /* ------------------User Portal style------------------- */
 .master-background {
   background-image: url("/assests/image/bus-2.png"); /* change path */
   background-size: cover;
   background-position: center;
-  min-height: 100vh;
+  min-height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: -60px;
+  padding: 100px 10px 20px 10px;
+}
+.heading{
+  margin-top: 6rem;
+}
+.heading h1{
+  color: #fffdf7;
+  font-size: 3.3rem;
+  font-family: "El Messiri", sans-serif;
+  font-weight: bolder;
+}
+.heading p{
+  color: #fffdf7;
+  font-family: "Roboto", sans-serif;
+  font-size: larger;
+}
+.card{
+  background-color: #fffffc75;
+}
+.form-label{
+  color: #070200;
+}
+input.form-control{
+  background-color: #fffffc93;
+  font-size: small;
+}
+input.form-control:focus{
+  background-color: #fffffc93;
+  border: 1px solid var(--main-color);
+  box-shadow: none;
+}
+.bus-src{
+  background: linear-gradient(90deg, #ff0000, #780116);
+  border: none; 
+  color: white;
+}
+.bus-src:hover{
+  background: linear-gradient(90deg, #780116, #ff0000);
+  color: white;
 }
