--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -38,3 +38,140 @@
   font-family: "Roboto", sans-serif;
   font-size: larger;
 }
+.form-part{
+  position: relative;
+}
+.light1{
+  position: absolute;
+  height: .7rem;
+  width: .7rem;
+  border-radius: 50%;
+  background-color: white;
+  bottom: 8.5rem;
+  left: -11.7rem;
+  animation: light1 .2s ease-in-out infinite;
+}
+.light2{
+  position: absolute;
+  height: .5rem;
+  width: .5rem;
+  border-radius: 50%;
+  background-color: white;
+  bottom: 8.4rem;
+  left: -.5rem;
+  animation: light2 .2s ease-in-out infinite;
+}
+@keyframes light1{
+  0%{box-shadow: 0 0 20px 5px rgb(247, 240, 209);
+    background-color: rgba(255, 255, 255, 0.774);}
+  50%{box-shadow: 0 0 20px 15px rgb(247, 240, 209);}
+  100%{box-shadow: 0 0 20px 5px rgb(247, 240, 209);
+    background-color: rgba(255, 255, 255, 0.774);}
+}
+@keyframes light2{
+  0%{box-shadow: 0 0 20px 4px rgb(247, 240, 209);
+    background-color: rgba(255, 255, 255, 0.774);}
+  50%{box-shadow: 0 0 20px 10px rgb(247, 240, 209);}
+  100%{box-shadow: 0 0 20px 4px rgb(247, 240, 209);
+    background-color: rgba(255, 255, 255, 0.774);}
+}
+
+
+/* ----------------------------- Responsive Design ------------------------- */
+
+/* Tablets */
+@media (max-width: 991px) {
+  .master-background {
+    
+    flex-direction: column;
+    text-align: center;
+    padding: 80px 20px 40px 20px;
+  }
+
+  .heading {
+    margin-top: 1rem;
+  }
+
+  .heading h1 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+
+  .heading p {
+    line-height: 0;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .form-part {
+    margin-top: 2rem;
+    padding: 0 1rem;
+  }
+
+  .light1,
+  .light2 {
+    display: none; /* hide glowing lights for smaller screens */
+  }
+  .bg-light.navbar-toggler.collapsed {
+  background: none !important;
+  border: none;
+}
+.navbar-toggler:focus {
+  text-decoration: none;
+  outline: 0;
+  box-shadow: none;
+  border: none;
+}
+
+}
+
+/* Mobiles */
+@media (max-width: 768px) {
+  .master-background {
+    position: relative;
+    min-height: auto;
+    margin-top: -60px;
+    padding: 18px 18px;
+    height: 18rem;
+  }
+  .heading{
+    margin-top: 0;
+  }
+  .heading h1 {
+    font-size: 1.6rem;
+    line-height: 1.2;
+  }
+
+  .heading p {
+    font-size: 0.8rem;
+  }
+  .form-part {
+    margin-top: 0;
+    padding: 0 2rem !important;
+  }
+
+  .card {
+    position: absolute;
+    padding: 1rem;
+    width: 100%;
+    border: none;
+    background: linear-gradient(180deg, #ff0000,#ff0000, #edf6f9,#edf6f9);
+    left: 0;
+    top: 25px;
+    box-shadow: 0 0 10px rgba(128, 128, 128, 0.808) !important;
+  }
+
+  .form-label {
+    display: none;
+  }
+
+  input.form-control {
+    font-size: 0.85rem;
+    padding: 8px;
+  }
+
+  .bus-src {
+    font-size: 0.9rem;
+    padding: 8px;
+  }
+}
